test: update scenario method by query
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>